# computer-vision-exercises

./: pyproject.toml
exercise_1/exercise_1/: exercise_1.ipynb
exercise_1/exercise_1/.ipynb_checkpoints/: exercise_1-checkpoint.ipynb
