[project]
name = "exercise-cv"
version = "0.1.0"
description = "Computer Vision exercises"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gco-wrapper>=3.0.9",
    "imageio>=2.37.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "nbgrader>=0.9.5",
    "notebook>=7.4.0",
    "opencv-python>=4.11.0.86",
    "pre-commit>=4.2.0",
    "rich>=14.0.0",
    "ruff>=0.11.5",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F811"]
